# mdb-cp

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  example-inc.yaml  example.yaml
.github/workflows/: build-and-upload.sh  build-release.sh  build.sh  create-release.sh  install-rust.sh  main.yml  release.sh  release.yml
src/: arg.rs  config.rs  cp.rs  error.rs  lib.rs  main.rs
src/config/: error.rs
src/cp/: arg.rs  cols.rs  db.rs  error.rs  ns.rs
