[package]
name = "mdb-cp"
version = "0.1.0"
edition = "2021"
authors = ["Xianghu Zhao <xianghuzhao@gmail.com>"]
description = "A simple tool for copying MongoDB data with mongodump/mongorestore"
license-file = "LICENSE"

[dependencies]
clap = { version = "4.3.3", features = ["derive"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_yaml = "0.9.21"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
